cluster/apps/minecraft/mc-router.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mc-router
  namespace: minecraft-ns
spec:
  type: NodePort
  ports:
    - targetPort: web
      name: web
      port: 8080
      nodePort: 25580
    - targetPort: proxy
      name: proxy
      port: 25565
      nodePort: 25565
  selector:
    run: mc-router
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mc-router
  name: mc-router
  namespace: minecraft-ns
spec:
  selector:
    matchLabels:
      run: mc-router
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: mc-router
    spec:
      serviceAccountName: mc-router
      containers:
        - image: itzg/mc-router:latest
          name: mc-router
          args: ["--api-binding", ":8080", "--in-kube-cluster"]
          ports:
            - name: proxy
              containerPort: 25565
            - name: web
              containerPort: 8080
          resources:
            requests:
              memory: 50Mi
              cpu: "100m"
            limits:
              memory: 100Mi
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: mc-stable
  namespace: minecraft-ns
  annotations:
    "mc-router.itzg.me/externalServerName": "minecraft.gemini.brendonmccool.com"
spec:
  ports:
    - port: 25565
  selector:
    run: mc-stable
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mc-stable
  name: mc-stable
  namespace: minecraft-ns
spec:
  selector:
    matchLabels:
      run: mc-stable
  template:
    metadata:
      labels:
        run: mc-stable
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - image: itzg/minecraft-server
          name: mc-stable
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mc-stable-pvc
