cluster/apps/minecraft/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mc-tcp-ing
  namespace: minecraft-ns
  #labels:
  #  app: minecraft-minecraft

spec:
  # entryPoints:  #ALL??
  #   - "minecraft", "web", "websecure"
  routes:
    - match: HostSNI(`*`)
      services:
        - name: minecraft-minecraft
          port: 25565
  # tls:
  #   passthrough: true
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: minecraft-ingress
#  namespace: minecraft-ns
#  labels:
#    app: minecraft-minecraft
#  annotations:
#    #app: minecraft-minecraft
#    # (Optional): Annotations for the Ingress Controller
#    # ---
#    # General:
#    # kubernetes.io/ingress.class: traefik
#    #
#    # TLS configuration:
#    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
#    #traefik.ingress.kubernetes.io/router.entrypoints: 25565
#    # traefik.ingress.kubernetes.io/router.tls: "true"
#    #
#    # Middleware:
#    # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
#
#spec:
#  rules:
#    - host: "minecraft.capricorn.brendonmccool.com"  # Your hostname
#      http:
#        paths:
#        # Path-based routing settings:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: minecraft-minecraft  # The name of the service
#                port:
#                  number: 25565
#                  #number: 30100  # Service Portnumber
#                  #name: minecraft
#  # tls:
#  # - hosts:
#  #   - your-hostname.com  # Your hostname
#  #   secretName: your-secret  # Your TLS Secret
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-rcon-ingress
  namespace: minecraft-ns
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # ---
    # General:
    # kubernetes.io/ingress.class: traefik
    #
    # TLS configuration:
    # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    #
    # Middleware:
    # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
spec:
  rules:
    - host: "minecraft-rcon.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-minecraft-rcon  # The name of the service
                port:
                  number: 25575  # Service Portnumber
  # tls:
  # - hosts:
  #   - your-hostname.com  # Your hostname
  #   secretName: your-secret  # Your TLS Secret
